--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,6 +2,8 @@
 {{!-- ciclos if y for each--}}
 
 {{!-- si hay productos: --}}
+    <h1 style="margin-left: 20px; margin-top: 20px">Welcome to the Home!</h1>
+
 
 {{#if products.length}}
     {{#each products}}
