--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 style="margin-left: 20px; margin-top: 20px">Bienvenid@ al Home</h1>
+    {{!-- <h1 style="margin-left: 20px; margin-top: 20px">Bienvenid@ al Home</h1> --}}
     <br>
     {{{body}}}
 </body>
