--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,3 +7,6 @@
 
 <h2>New user? Sign up Here!</h2>
 <button onclick="location.href='/signup'">Go to Sign Up</button>
+
+<h2>Login con Github</h2>
+<button onclick="location.href='/users/loginGithub'">Github</button>
