subida_practica_integra

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -10,3 +10,6 @@
 
 <h2>Login con Github</h2>
 <button onclick="location.href='/users/loginGithub'">Github</button>
+
+<h2>Forgot password?</h2>
+<button onclick="location.href='/forgotPassword'">Change password</button>
